<resources>
    <string name="app_name">Blood</string>

    <string name="title">Blood</string>
    <string name="content">Theo dõi huyết áp</string>
    <string name="hello">Xin chào</string>
    <string name="health">Hôm nay bạn cảm thấy thế nào?</string>
    <string name="next">Tiếp theo</string>
    <string name="bloodPressure">Huyết áp</string>
    <string name="bloodSugar">Đường huyết</string>
    <string name="heartRate">Nhịp tim</string>
    <string name="viewAll">Xem tất cả</string>
    <string name="languages">Ngôn ngữ</string>
    <string name="setting">Cài đặt</string>
    <string name="infomation">Thông tin</string>
    <string name="language_options">Tùy chọn ngôn ngữ</string>
    <string name="share">Chia sẻ với bạn bè</string>
    <string name="policy">Chính sách</string>
    <string name="rate">Đánh giá</string>
    <string name="add_record"> + Add Record</string>
    <string name="min">Nhỏ nhất</string>
    <string name="max">Lớn nhất</string>
    <string name="na">N/A</string>
    <string name="mgDl">mg/dL</string>
    <string name="oneRecoed">thêm 1 bản ghi</string>
    <string name="moreInfo">Thêm thông tin</string>
    <string name="gotIt">Hiểu rồi</string>
    <string name="save">Lưu</string>
    <string name="dateTime">Ngày &amp; Thời gian</string>
    <string name="note">Ghi chú</string>
    <string name="addPressure">Thêm chỉ số huyết áp</string>
    <string name="addHeartRate">Thêm chỉ số nhịp tim</string>
    <string name="updatePressure">Sửa chỉ số huyết áp</string>
    <string name="result">Chi tiết</string>
    <string name="goHome">Trang chủ</string>
    <string name="addBloodSugar">Thêm Chỉ số huyết áp</string>
    <string name="editBloodSugar">Sửa chỉ số đường huyết</string>
    <string name="sugarConcentration">Nồng độ đường</string>
    <string name="mol_l">mmol/l</string>
    <string name="enterNote">Ghi chú</string>
    <string name="measured">Được Đo</string>
    <string name="selectionFunction">Chọn chức năng</string>
    <string name="afterBreakfast">Sau bữa sáng</string>
    <string name="beforeBreakfast">Trước bữa sáng</string>
    <string name="afterLunch">Sau bữa trưa</string>
    <string name="beforeLunch">Trước bữa trưa</string>
    <string name="afterDinner">Sau bữa tối</string>
    <string name="beforeDinner">Trước bữa tối</string>


    <string name="mulish400">font/mulish_bold.ttf</string>

    <string name="polyicy">Ứng dụng Blood thu thập một số thông tin cá nhân mà bạn cung cấp như tên, số điện thoại, nhóm máu hoặc các dữ liệu sức khỏe bạn tự nhập. Những thông tin này được sử dụng để quản lý tài khoản, hỗ trợ theo dõi sức khỏe và cải thiện trải nghiệm sử dụng ứng dụng. Chúng tôi cam kết không bán hoặc chia sẻ dữ liệu cá nhân của bạn cho bất kỳ bên thứ ba nào, trừ khi có yêu cầu từ cơ quan pháp luật hoặc khi bạn đồng ý chia sẻ cho các đơn vị y tế liên quan.

Dữ liệu của bạn được lưu trữ và bảo mật bằng các biện pháp phù hợp, nhưng không thể đảm bảo an toàn tuyệt đối. Bạn có quyền xem, chỉnh sửa hoặc yêu cầu xoá thông tin cá nhân của mình. Ứng dụng có thể sử dụng các công cụ phân tích để cải thiện chức năng, nhưng không sử dụng cho mục đích theo dõi cá nhân.

Nếu có bất kỳ câu hỏi nào liên quan đến quyền riêng tư, bạn có thể liên hệ trực tiếp với chúng tôi qua email hoặc thông tin hỗ trợ được cung cấp trong ứng dụng. Chúng tôi có thể cập nhật chính sách này theo thời gian và sẽ thông báo trong ứng dụng khi có thay đổi.</string>


</resources>