<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="#f2f6ff"
    android:orientation="vertical">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:background="#E34957">

        <TextView
            android:id="@+id/btnBack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:background="@drawable/ic_back"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/txtTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/mulish_extra_bold_800"
            android:text="@string/editBloodSugar"
            android:textColor="@color/white"
            android:textSize="24sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/lstStatusSugar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="8dp"
        android:orientation="horizontal"
        app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
        app:spanCount="1"
        tools:listitem="@layout/item_add_blood_sugar">

    </androidx.recyclerview.widget.RecyclerView>


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="328dp"
        android:layout_height="200dp"
        android:layout_gravity="center"
        android:background="@drawable/bg_setting_item"
        android:padding="8dp">

        <TextView
            android:id="@+id/txtSurgarConcentration"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/mulish_bold"
            android:text="@string/sugarConcentration"
            android:textSize="18sp"
            android:textColor="#1E2D50"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/edtSurgarConcentration"
            android:layout_width="258dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:textColor="#1E2D50"
            android:textSize="18sp"
            android:textAlignment="center"
            android:hint="0.0"
            android:inputType="numberDecimal"
            android:fontFamily="@font/mulish_semi_bold_600"
            app:layout_constraintStart_toStartOf="@id/txtSurgarConcentration"
            app:layout_constraintTop_toBottomOf="@id/txtSurgarConcentration" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/inter_400"
            android:text="@string/mol_l"
            android:textColor="#3E5574"
            app:layout_constraintBottom_toBottomOf="@id/edtSurgarConcentration"
            app:layout_constraintStart_toEndOf="@id/edtSurgarConcentration"
            app:layout_constraintTop_toTopOf="@id/edtSurgarConcentration" />

        <TextView
            android:id="@+id/txtMeasured"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:fontFamily="@font/mulish_bold"
            android:text="@string/measured"
            android:textColor="#1E2D50"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="@id/edtSurgarConcentration"
            app:layout_constraintTop_toBottomOf="@id/edtSurgarConcentration" />

        <TextView
            android:id="@+id/btnMeasured"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:background="@drawable/bg_btn_selection_blood_sugar"
            android:fontFamily="@font/mulish_semi_bold_600"
            android:padding="12dp"
            android:text="@string/selectionFunction"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="14sp"
            app:layout_constraintStart_toStartOf="@id/txtMeasured"
            app:layout_constraintTop_toBottomOf="@id/txtMeasured" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:id="@+id/txtTimeAnDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="38dp"
        android:layout_marginTop="32dp"
        android:fontFamily="@font/montserrat_700"
        android:text="@string/dateTime"
        android:textColor="#B21212"
        android:textSize="18sp" />

    <LinearLayout
        android:layout_width="328dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="16dp"
        android:baselineAligned="false"
        android:orientation="horizontal">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:layout_weight="1"
            android:background="@drawable/bg_time_date">

            <TextView
                android:id="@+id/btnCalendar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/ic_calendar"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/txtCalendar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:fontFamily="@font/mulish_semi_bold_600"
                android:textColor="#1E2D50"
                android:textSize="12sp"
                app:layout_constraintBottom_toBottomOf="@id/btnCalendar"
                app:layout_constraintStart_toEndOf="@id/btnCalendar"
                app:layout_constraintTop_toTopOf="@id/btnCalendar" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_weight="1"
            android:background="@drawable/bg_time_date">

            <TextView
                android:id="@+id/btnClock"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/ic_clock"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/txtTime"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:fontFamily="@font/mulish_semi_bold_600"
                android:textColor="#1E2D50"
                android:textSize="12sp"
                app:layout_constraintBottom_toBottomOf="@id/btnClock"
                app:layout_constraintStart_toEndOf="@id/btnClock"
                app:layout_constraintTop_toTopOf="@id/btnClock" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </LinearLayout>

    <TextView
        android:id="@+id/txtNote"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="38dp"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/montserrat_700"
        android:text="@string/note"
        android:textColor="#B21212"
        android:textSize="18sp" />

    <EditText
        android:id="@+id/edtNote"
        android:layout_width="328dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="16dp"
        android:background="@drawable/bg_edt_add_pressure"
        android:hint="@string/enterNote"
        android:inputType="text"
        android:padding="10dp"
        android:textColor="#000000"
        android:textColorHint="#999999"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/btnSave"
        android:layout_width="328dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/bg_btn_got_it"
        android:padding="16dp"
        android:text="@string/save"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        android:textSize="16sp" />

</LinearLayout>
